--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       position: fixed;
       font-family: Arial, Helvetica, sans-serif;
       font-size: 14px;
-      width: 40%;
+      width:40%;
       height: auto;
       top: 50%;
       left: 50%;
@@ -380,7 +380,7 @@
         </button>
         <div id="instruction_text">
           <button class="close" onclick="closeInstruction(this)">X</button>
-          This site presents a modelling tool for describing and visualising interactions. This tool is built upon a relational model previously
+          This site presents a modelling tool for describing and visualising interactions in interactive art. This tool is built upon a relational model previously
           developed for describing different forms of interaction in the context
           of interactive artworks. A detailed description of the model can be
           found in
@@ -394,6 +394,10 @@
           <br />
           <br />
           <span style="font-weight: bold">How to use the tool:</span><br />
+          A video tutorial about the relational modelling tool can be seen <a href="https://youtu.be/HeniTtbI1SI?si=oTD_L0sLw7MFiF_B" target="_blank">here</a>.
+          <br />
+          <br />
+          <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/HeniTtbI1SI?si=fZbqHC-U9GJm03Hr" title="Tutorial on the Relational Modeling Tool" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
           You can either directly work on an empty worksheet or browse the
           database to load existing interactive artworks for inspirations. An example is locked for view only if all input fields are disabled. You can click on the Unlock button to create an editable copy. 
           Before you start, please name the current worksheet, such as 'Artwork
