--- a/generate.html
+++ b/generate.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Relational Model of Interaction</title>
+    <title>Relational Modelling Tool: Generative</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="assets/svg2pdf.js/dist/svg2pdf.umd.min.js"></script>
 
@@ -931,7 +931,7 @@
       <button id="updateAction">Update Action List</button>
       <button id="updateEffect">Update Effect List</button>
     </div> -->
-    <div style="margin: 15px">
+    <div style="margin: 15px 15px 0 15px">
       <button class="generate" onclick="randomiseAllCommunication()">Generate all communication<span class="info"
         >Randomly fill in all forms of communication in the input field.
       </span></button>
@@ -958,7 +958,7 @@
       <svg id="vis_anno" width="250" height="679"></svg>
     </div>
     <div id="credit">
-      <p>Developed as part of a PhD research by <a href="https://www.universiteitleiden.nl/en/staffmembers/dan-xu#tab-1" target="_blank">Dan Xu</a>, supervised by Maarten H. Lamers, Edwin van der Heide, Fons J. Verbeek</p>
+      <p>Developed as part of the PhD research by <a href="https://www.universiteitleiden.nl/en/staffmembers/dan-xu#tab-1" target="_blank">Dan Xu</a>, supervised by Maarten H. Lamers, Edwin van der Heide, Fons J. Verbeek</p>
     </div>
   </body>
 </html>
