update about description

--- a/index.html
+++ b/index.html
@@ -416,6 +416,9 @@
           worksheet.
           <br />
           <br />
+          <span style="font-weight: bold">The generative components (experimental) of the tool can be accessed <a href="./generate.html">here.</a></span>
+          <br />
+          <br />
           <span style="font-weight: bold">Note:</span><br />
           There is no right or wrong way of describe an interaction. Feel free
           to tailor the level of details to suit your purpose and experiment
