update definitions of concepts

--- a/index.html
+++ b/index.html
@@ -510,8 +510,7 @@
           <div class="anno_block" style="font-size: 20px; font-weight: bold">
             ELEMENT:
             <span class="info"
-              >Individual actors in the interaction exhibit the same or similar
-              set of behaviours.
+              >Independent actors playing a significant and unique role in the interaction. An element can be a biological organism, a technical system, or an object.
             </span>
           </div>
           <div class="anno_block">
@@ -538,7 +537,7 @@
             style="font-size: 20px; font-weight: bold; margin-top: 10px"
           >
             ACTION:<span class="info"
-              >Something that is done or performed by the element to participate in the interaction.
+              >An activity, behaviour, or natural response performed or carried out by the element that has significant effects on shaping the interaction.
               <br />
               <br />
               Either an action is <b>intended</b> for participating in the
@@ -548,7 +547,7 @@
               <br />
               <br />
               An action can be initiated by the element itself or as a reaction
-              to other action(s). Please specify the necessary conditions
+              to other element(s). Please specify the necessary conditions
               in the form of <b>"If ... do(es) ..."</b>.
               When there are more than three conditions, you can add a
               <b>footnote</b> to specify their order and relationships if
@@ -680,8 +679,7 @@
               <div class="ancom_block" style="margin: 0">
                 COMMUNICATION:
                 <span class="info"
-                  >A form of communication is created when an action is done to another
-                  element. An action can be directed at different elements
+                  >Communication describes how an action reaches the receiving elements. An action can be directed at different elements
                   thus creating multiple forms of communication.
                   <br />
                   <br />
