--- a/generate.html
+++ b/generate.html
@@ -607,7 +607,7 @@
           /><datalist id="existTypes"></datalist>
         </div>
         <div class="block">
-          <input list="eCount" id="ele_num" placeholder="Count" /><datalist
+          <input list="eCount" id="ele_num" placeholder="Count" onchange="updateVisualise()"/><datalist
             id="eCount"
           >
             <option value="1"></option>
@@ -634,7 +634,7 @@
             </button>
             <div class="act_block">
               <label for="actionV" id="actionIn">1</label>
-              <input list="existAction" id="actionV" placeholder="Action" />
+              <input list="existAction" id="actionV" placeholder="Action" onchange="updateVisualise()"/>
               <datalist id="existAction"></datalist>
             </div>
             <div class="act_block">
@@ -644,12 +644,14 @@
                 name="intention"
                 value="intentional"
                 checked
+                onclick="updateVisualise()"
               /><label for="intentional">Intended</label>
               <input
                 type="radio"
                 id="unintentional"
                 name="intention"
                 value="unintentional"
+                onclick="updateVisualise()"
               /><label for="unintentional">Unintended</label>
             </div>
             <div id="condition" style="width: 100%; background-color: #cdcffc;">
@@ -675,7 +677,7 @@
                 </select>
                 <div id="perform" style="display: inline">
                   <span>do(es)</span>
-                  <select class="if_act" style="width: 95px">
+                  <select class="if_act" style="width: 95px" onclick="updateVisualise()">
                     <option value="">Action</option>
                   </select>
                 </div>
@@ -801,7 +803,7 @@
                   <input type="number" id="permutateCount" name="permutateCount" min="0" max="" value="0" onchange="loadPermutation(this)" disabled/>
                 </div>
                 <div class="block">
-                  <select id="to" name="to_elements" style="float: left">
+                  <select id="to" name="to_elements" style="float: left" onclick="updateVisualise()">
                     <option value="">--To which element--</option>
                     <option value="1">#1</option>
                   </select>
@@ -823,8 +825,9 @@
                     id="via_means"
                     name="means"
                     value="via"
+                    onclick="updateVisualise()"
                   /><label for="via_means">Via </label>
-                  <select id="via" name="via_elements">
+                  <select id="via" name="via_elements" onclick="updateVisualise()">
                     <option value="">--Select an element--</option>
                     <option value="1">#1</option>
                   </select>
@@ -834,8 +837,9 @@
                     list="eCount"
                     id="config_from"
                     placeholder="From"
+                    onchange="updateVisualise()"
                   /><span style="font-size: 25px">&rarr;</span
-                  ><input list="eCount" id="config_to" placeholder="To" />
+                  ><input list="eCount" id="config_to" placeholder="To" onchange="updateVisualise()"/>
                 </div>
                 <div class="block"><input list="eCount" id="com_num" /></div>
                 <div class="block">
@@ -845,6 +849,7 @@
                     name="access"
                     value="public"
                     checked
+                    onclick="updateVisualise()"
                   /><label for="public_access">Public</label>
                 </div>
                 <div class="block">
@@ -853,6 +858,7 @@
                     id="private_access"
                     name="access"
                     value="private"
+                    onclick="updateVisualise()"
                   /><label for="private_access">Private</label>
                 </div>
                 <div class="effect_container">
@@ -863,6 +869,7 @@
                     <input
                     list = "existEffect"
                     class="effect"
+                    onchange="updateVisualise()"
                     ></input>
                     <datalist id="existEffect"></datalist>
                     <button
