--- a/index.html
+++ b/index.html
@@ -385,12 +385,15 @@
           of interactive artworks. A detailed description of the model can be
           found in
           <a
-            href="https://isea2023.ensad.fr/#towards-models-of-co-located-interaction-in-interactive-art"
+            href="https://www.doi.org/10.69564/ISEA2023-92-full-Xu-et-al-Co-located-Interaction"
             target="_blank"
             >this publication<sup>1</sup></a
           >. Three key concepts are used in the model to dissect an interaction: element, action, and communication. An element refers to an individual actor participating
           in the interaction. Elements with the same properties and behaviours are grouped together in a profile with an index starting with "#". For an element, the model examines the actions performed by them to interact with other elements. Following an action, one or more forms
           of communication are created and directed at (an)other element(s). Various descriptors are used to facilitate the description of these concepts. 
+          <br />
+          <br />
+          For an overview of the PhD project, please visit <a href="https://danxxxu.github.io/relational.html" target="_blank">here.</a>
           <br />
           <br />
           <span style="font-weight: bold">How to use the tool:</span><br />
@@ -425,7 +428,10 @@
           with different approaches to find the most effective description. If you have any further questions or comments, please contact <a href="mailto:d.xu@liacs.leidenuniv.nl">d.xu@liacs.leidenuniv.nl</a>.
           <br />
           <br />
-          <span style="font-size: 10px">1. Dan Xu, Maarten H. Lamers, Edwin van der Heide: Towards a Relational Model of Co-located Interaction in Interactive Art. In: Emmanuel Mahé (eds.) Proceedings of the 28th International Symposium on Electronic Art 2023, pp. 723-732. École des Arts Décoratifs (2024).</span>
+          <span style="font-size: 10px"><a
+            href="https://www.doi.org/10.69564/ISEA2023-92-full-Xu-et-al-Co-located-Interaction"
+            target="_blank"
+            >1. Dan Xu, Maarten H. Lamers, Edwin van der Heide: Towards a Relational Model of Co-located Interaction in Interactive Art. In: Emmanuel Mahé (eds.) Proceedings of the 28th International Symposium on Electronic Art 2023, pp. 723-732. École des Arts Décoratifs (2024).</a></span>
         </div>
         <select
           id="select_interaction"
